temp/podScheduling.yml
apiVersion: v1 
kind: Pod
metadata:
  name: pod-scheduling-test
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In 
            values:
            - realworld
          - key: kubernetes.io/arch
            operator: In 
            values:
            - arm
        - matchExpressions:
            - key: kubernetes.io/os 
              operator: In 
              values:
              - linux
  containers:
  - name: busybox
    image: busybox:stable
    resources:
      limits:
        cpu: 2000m
        memory: 500Mi
