temp/securityContext.yml
apiVersion: v1
kind: Pod
metadata:
  name: ping
spec:
  containers:
    - name: ping-container
      image: alpine:latest
      command: ["/bin/ping", "google.com"]
      securityContext:
        capabilities:
          add:
            - NET_RAW
          drop:
            - ALL
      resources:
        limits:
          cpu: 2000m
          memory: 1000Mi
        requests:
          cpu: 1500m
          memory: 750Mi
